# xmlrpc-c

advanced/: GNUmakefile  Makefile.config.in  Makefile.version  common.mk  config.mk.in  configure  configure.in  version.mk  xmlrpc-c-config.main  xmlrpc-c-config.test.main  xmlrpc_config.h.in
stable/: GNUmakefile  Makefile.config.in  README  common.mk  config.mk.in  configure  configure.in  dylib-common.mk  version.mk  xmlrpc-c-config.main  xmlrpc-c-config.test.main  xmlrpc_config.h.in
trunk/: GNUmakefile  Makefile.common  common.mk  (+11 more)
trunk/xmlrpc-c/: .cvsignore  BUGS  COPYING  CREDITS  GNUmakefile  HACKING  HISTORY  Makefile  Makefile.am  Makefile.common  Makefile.config.in  Makefile.in  NEWS  README  REFACTORINGS  SECURITY  TODO  acconfig.h  autogen.sh  configure.in  dll-common.make  dylib-common.make  irix-common.make  shell_config  unix-common.make  version.h  xmlrpc-c-config.in  xmlrpc-c-config.main  xmlrpc-c-config.test.in  xmlrpc-c-config.test.main  xmlrpc-c.lsm.in  xmlrpc-c.spec.in  xmlrpc_config.h.in  xmlrpc_win32_config.h
trunk/xmlrpc-c/Windows/: ConfigureWin32.bat  ReadMeWin32.txt  config.h  cpptest.dsp  cpptest.vcproj  query_meerkat.dsp  rpctest.dsp  rpctest.vcproj  win32_config.h  xmlrpc.dsp  xmlrpc.dsw  xmlrpc.vcproj  xmlrpc_sample_add_asynch_client.dsp  xmlrpc_sample_add_server.dsp  xmlrpc_sample_add_server.vcproj  xmlrpc_sample_add_sync_client.dsp  xmlrpc_win32_config.h
trunk/xmlrpc-c/conf/abyss_root/conf/: abyss.conf
trunk/xmlrpc-c/debian/: changelog
trunk/xmlrpc-c/doc/: HISTORY  INSTALL  Makefile.am  TODO  gpg-signature-info.txt  overview.txt
trunk/xmlrpc-c/examples/: .cvsignore  Makefile  Makefile.am  README  abyss.conf  asynch_client.c  auth_client.c  gen_sample_add_xml.c  interop-cgi.c  interop-client.cc  meerkat-app-list.cc  meerkat-app-list.cpp  query-meerkat.c  sample-cgi.c  server.c  synch_client.c  xmlrpc.c  xmlrpc_asynch_client.c  xmlrpc_inetd_server.c  xmlrpc_loop_server.c  xmlrpc_sample_add_client.c  xmlrpc_sample_add_server.c  xmlrpc_sample_add_server_cgi.c  xmlrpc_sample_add_server_w32httpsys.c  xmlrpc_server_validatee.c  xmlrpc_socket_server.c
trunk/xmlrpc-c/examples/cpp/: .cvsignore  Makefile  asynch_client.cpp  meerkat-app-list.cpp  pstream_inetd_server.cpp  sample_add_client_complex.cpp  xmlrpc_inetd_server.cpp  xmlrpc_loop_server.cpp  xmlrpc_sample_add_client.cpp  xmlrpc_sample_add_server.cpp
trunk/xmlrpc-c/include/: Makefile
trunk/xmlrpc-c/include/xmlrpc-c/: abyss.h  abyss_unixsock.h  base.h  base.hpp  base_int.h  cgi.h  client.h  client.hpp  client_int.h  client_transport.hpp  girerr.hpp  girmem.hpp  oldcppwrapper.hpp  packetsocket.hpp  registry.hpp  server.h  server_abyss.h  server_abyss.hpp  server_pstream.hpp  string_int.h  transport.h  util.h  util_int.h  xml.hpp  xmlparser.h
trunk/xmlrpc-c/lib/: Makefile  Makefile.am  Makefile.in
trunk/xmlrpc-c/lib/abyss/: Makefile  Makefile.in  makefile_rules.bcc32
trunk/xmlrpc-c/lib/abyss/src/: Abyss.dsp  Abyss.dsw  Makefile  abyss.h  abyss_info.h  chanswitch.c  chanswitch.h  conf.c  conn.c  conn.h  data.c  data.h  date.c  date.h  file.c  file.h  handler.c  http.c  http.h  main.c  response.c  server.c  server.h  session.c  session.h  socket.c  socket.h  socket_unix.c  socket_win.c  thread.c  thread_windows.c
trunk/xmlrpc-c/lib/curl_transport/: Makefile  xmlrpc_curl_transport.c  xmlrpc_curl_transport.h
trunk/xmlrpc-c/lib/expat/: Makefile  Makefile.in
trunk/xmlrpc-c/lib/expat/gennmtab/: .cvsignore  Makefile  Makefile.in  gennmtab.dsp
trunk/xmlrpc-c/lib/expat/xmlparse/: Makefile  xmlparse.c  xmlparse.dsp
trunk/xmlrpc-c/lib/expat/xmltok/: .cvsignore  Makefile  Makefile.am  Makefile.in  xmldef.h  xmltok.dsp  xmltok.h
trunk/xmlrpc-c/lib/expat/xmlwf/: Makefile.am
trunk/xmlrpc-c/lib/libutil/: Makefile  casprintf.c  error.c  make_printable.c  time.c
trunk/xmlrpc-c/lib/libwww_transport/: Makefile  xmlrpc_libwww_transport.c  xmlrpc_libwww_transport.h
trunk/xmlrpc-c/lib/util/: Makefile  cmdline_parser.c  getoptx.c
trunk/xmlrpc-c/lib/util/include/: c_util.h  girerr.hpp  girstring.h  mallocvar.h  pthreadx.h
trunk/xmlrpc-c/lib/wininet_transport/: Makefile  xmlrpc_wininet_transport.c  xmlrpc_wininet_transport.h
trunk/xmlrpc-c/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile2  XmlRpcCpp.cc  XmlRpcCpp.cpp  XmlRpcCpp.h  clienttest.c  cpptest.cc  registry.c  registry.h  rpctest.c  servertest.c  system_method.c  trace.c  validatee.c  win32_pthreads.c  xmlrpc.h  xmlrpc_abyss.c  xmlrpc_abyss.h  xmlrpc_abyss_int.h  xmlrpc_array.c  xmlrpc_authcookie.c  xmlrpc_base64.c  xmlrpc_build.c  xmlrpc_builddecomp.c  xmlrpc_cgi.c  xmlrpc_cgi.h  xmlrpc_client.c  xmlrpc_client.h  xmlrpc_client_global.c  xmlrpc_data.c  xmlrpc_datetime.c  xmlrpc_decompose.c  xmlrpc_expat.c  xmlrpc_expat.h  xmlrpc_int.h  xmlrpc_libxml2.c  xmlrpc_parse.c  (+15 more)
trunk/xmlrpc-c/src/cpp/: Makefile  XmlRpcCpp.h  base64.cpp  client.cpp  client_simple.cpp  cpptest.cpp  curl.cpp  fault.cpp  girerr.cpp  girmem.cpp  libwww.cpp  packetsocket.cpp  param_list.cpp  pstream.cpp  registry.cpp  registry.hpp  server_abyss.cpp  server_abyss.hpp  server_pstream.cpp  value.cpp  wininet.cpp  xml.cpp  xmlrpc.hpp  xmlrpc_value.cpp
trunk/xmlrpc-c/src/cpp/test/: Makefile  server_abyss.cpp  test.cpp  testclient.cpp  tools.cpp  tools.hpp
trunk/xmlrpc-c/src/test/: Makefile  abyss.c  cgi.c  client.c  method_registry.c  parse_xml.c  serialize.c  server_abyss.c  test.c  test.h  value.c  xml_data.c
trunk/xmlrpc-c/src/testdata/: Makefile.am
trunk/xmlrpc-c/tools/: Makefile  Makefile.am  Makefile.common  xml-rpc-api2txt
trunk/xmlrpc-c/tools/binmode-rpc-kit/: Makefile
trunk/xmlrpc-c/tools/turbocharger/: Makefile  Makefile.am  README
trunk/xmlrpc-c/tools/xml-rpc-api2cpp/: .cvsignore  DataType.cc  DataType.cpp  DataType.h  Makefile  Makefile.am  Makefile.in  README  SystemProxy.cpp  SystemProxy.h  SystemProxy.hpp  XmlRpcClass.cc  XmlRpcClass.cpp  XmlRpcFunction.cc  XmlRpcFunction.h  xml-rpc-api2cpp.cc
trunk/xmlrpc-c/tools/xmlrpc/: Makefile  dumpvalue.c  xmlrpc.c  xmlrpc.html
trunk/xmlrpc-c/tools/xmlrpc_transport/: Makefile
(+1368 files in other folders)
